[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/moving_background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Sfx/ui_select.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Sfx/ui_hover.wav" type="AudioStream" id=3]
[ext_resource path="res://Themes/options_theme.tres" type="Theme" id=4]
[ext_resource path="res://Themes/title_theme.tres" type="Theme" id=5]
[ext_resource path="res://Scripts/menu_stuff_container.gd" type="Script" id=8]
[ext_resource path="res://Scenes/vhs_shader.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scripts/menu.gd" type="Script" id=10]

[node name="menu" type="Node2D"]
script = ExtResource( 10 )

[node name="moving_background2" parent="." instance=ExtResource( 1 )]

[node name="menu_items" type="Control" parent="."]
margin_right = 54.0
margin_bottom = 54.0
mouse_filter = 1

[node name="title" type="Label" parent="menu_items"]
margin_left = 1.0
margin_top = 28.0
margin_right = 1028.0
margin_bottom = 198.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.92549, 1, 0, 1 )
text = "That Brick Game"
align = 1
valign = 1

[node name="title_underline" type="Label" parent="menu_items/title"]
margin_left = 1.0
margin_top = 67.0
margin_right = 1029.0
margin_bottom = 237.0
theme = ExtResource( 5 )
text = ".............."
align = 1
valign = 1

[node name="menu_stuff" type="CenterContainer" parent="menu_items"]
margin_left = 348.0
margin_top = 259.0
margin_right = 676.0
margin_bottom = 567.0
mouse_filter = 1

[node name="menu_stuff_container" type="GridContainer" parent="menu_items/menu_stuff"]
margin_right = 328.0
margin_bottom = 308.0
rect_min_size = Vector2( 255, 308 )
script = ExtResource( 8 )

[node name="start" type="LinkButton" parent="menu_items/menu_stuff/menu_stuff_container"]
margin_right = 328.0
margin_bottom = 74.0
mouse_filter = 1
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0.788235, 0.94902, 0.552941, 1 )
enabled_focus_mode = 0
text = "Start"
underline = 2

[node name="settings" type="LinkButton" parent="menu_items/menu_stuff/menu_stuff_container"]
margin_top = 78.0
margin_right = 328.0
margin_bottom = 152.0
mouse_filter = 1
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0.788235, 0.94902, 0.552941, 1 )
enabled_focus_mode = 0
text = "Settings"
underline = 2

[node name="help" type="LinkButton" parent="menu_items/menu_stuff/menu_stuff_container"]
margin_top = 156.0
margin_right = 328.0
margin_bottom = 230.0
mouse_filter = 1
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0.788235, 0.94902, 0.552941, 1 )
enabled_focus_mode = 0
text = "Help"
underline = 2

[node name="quit" type="LinkButton" parent="menu_items/menu_stuff/menu_stuff_container"]
margin_top = 234.0
margin_right = 328.0
margin_bottom = 308.0
mouse_filter = 1
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0.788235, 0.94902, 0.552941, 1 )
enabled_focus_mode = 0
text = "Quit"
underline = 2

[node name="vhs_shader" parent="." instance=ExtResource( 9 )]

[node name="ui_hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
mix_target = 2

[node name="ui_select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
mix_target = 2

[connection signal="mouse_entered" from="menu_items/menu_stuff/menu_stuff_container/start" to="menu_items/menu_stuff/menu_stuff_container" method="_on_start_mouse_entered"]
[connection signal="pressed" from="menu_items/menu_stuff/menu_stuff_container/start" to="menu_items/menu_stuff/menu_stuff_container" method="_on_start_pressed"]
[connection signal="mouse_entered" from="menu_items/menu_stuff/menu_stuff_container/settings" to="menu_items/menu_stuff/menu_stuff_container" method="_on_settings_mouse_entered"]
[connection signal="pressed" from="menu_items/menu_stuff/menu_stuff_container/settings" to="menu_items/menu_stuff/menu_stuff_container" method="_on_settings_pressed"]
[connection signal="mouse_entered" from="menu_items/menu_stuff/menu_stuff_container/help" to="menu_items/menu_stuff/menu_stuff_container" method="_on_help_mouse_entered"]
[connection signal="pressed" from="menu_items/menu_stuff/menu_stuff_container/help" to="menu_items/menu_stuff/menu_stuff_container" method="_on_help_pressed"]
[connection signal="mouse_entered" from="menu_items/menu_stuff/menu_stuff_container/quit" to="menu_items/menu_stuff/menu_stuff_container" method="_on_quit_mouse_entered"]
[connection signal="pressed" from="menu_items/menu_stuff/menu_stuff_container/quit" to="menu_items/menu_stuff/menu_stuff_container" method="_on_quit_pressed"]
